Fix crash in TestWebKitAPI.NetworkProcess.CrashWhenNotAssociatedWithDataStore https://bugs.webkit.org/show_bug.cgi?id=229209 rdar://82040197

Reviewed by Geoffrey Garen.

When getting network process connection fails, we don't need to retry or crash UI process if web process is
already gone.

* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::getNetworkProcessConnection):


Canonical link: https://commits.webkit.org/240622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281175 268f45cc-cd09-0410-ab3c-d52691b4dbfc